correct alignment of cloud boxes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -109,6 +109,7 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  height: 100%;
 }
 
 .card__image {
